Add v0.4.4 release notes to the release history page